plugins {
    id "idea"
    id "java"
    id "io.freefair.lombok" version "5.3.0"
}

sourceCompatibility = JavaVersion.VERSION_15
targetCompatibility = JavaVersion.VERSION_15

repositories {
    mavenCentral()
}

ext {
    junitVersion = "5.7.1"
}

dependencies {
    testImplementation "org.junit.jupiter:junit-jupiter-api:${junitVersion}"

    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:${junitVersion}"
}

test {
    useJUnitPlatform()
}

lombok {
    config["lombok.accessors.chain"] = "true"
    config["lombok.toString.callSuper"] = "call"
    config["lombok.equalsAndHashCode.callSuper"] = "skip"
}

tasks.withType(JavaCompile) {
    options.compilerArgs += ['--enable-preview']
}